# MapReducePlusPlus

./: .gitignore  CMakeLists.txt  README.md  run_demo.sh
include/: generator.h  key_value.h
mr/: word_count.h
proto/: hello.proto  mr.proto
src/: client.cc  master.cc  server.cc  worker.cc
